# hyprland-rs

./: .cbfmt.toml  .gitignore  Cargo.toml  LICENSE  MIGRATION.md  README.md  fix_workspace.sh  flake.nix  fleet.toml  modify_dispatch.py  run_tests.sh  rusty-hook.toml  test.sh  test_parser.rs  test_script.rs  treefmt.toml  unify.py
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: dispatcher.yml  event.yml
.github/workflows/: build.yml  check-doc.yml  clippy-lint.yml
examples/: almost_everything.rs  bind.rs  bind_async.rs  data.rs  data_async.rs  dispatch.rs  dispatch_async.rs  events.rs  events_async.rs  example.rs  exec.rs  exec_async.rs  keyword.rs  keyword_async.rs
examples/almost_everything/: Cargo.toml
examples/almost_everything/src/: main.rs
examples/almost_everything_async/: Cargo.toml
examples/almost_everything_async/src/: main.rs
hyprland-macros/: Cargo.toml  README.md
hyprland-macros/src/: lib.rs
src/: bind_new.rs  config.rs  ctl.rs  data.rs  dispatch.rs  dispatch_new.rs  encoding.rs  error.rs  event_listener.rs  hyprpaper.rs  instance.rs  keyword.rs  lib.rs  lua.rs  shared.rs  unsafe_impl.rs  window_rule.rs
src/data/: asynchronous.rs  blocking.rs  helpers.rs  macros.rs  mod.rs  regular.rs  shared.rs
src/event_listener/: async_im.rs  async_mut.rs  immutable.rs  macros.rs  mod.rs  mutable.rs  shared.rs  stream.rs
src/event_listener/shared/: event_parsing_test.rs  mod.rs  test.rs
src/hyprpaper/: error.rs  keyword.rs  monitor.rs  preload.rs  reload.rs  unload.rs  wallpaper.rs  wallpaper_listing.rs  wallpaper_mode.rs
