[package]
name = "hyprland"
edition = "2021"
readme = "README.md"
description = "A unoffical rust wrapper for hyprland's IPC"
homepage = "https://github.com/hyprland-community/hyprland-rs"
version.workspace = true
license.workspace = true
author.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version = "1.75.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.nix]
build = true

[profile.release]
opt-level = 3
strip = true
lto = true

[workspace]
members = [
    "hyprland-macros",
]

[workspace.package]
version = "0.4.0-beta.2"
license = "GPL-3.0-or-later"
repository = "https://github.com/hyprland-community/hyprland-rs"
keywords = ["hyprland", "ipc", "hypr", "wayland", "linux"]
categories = ["api-bindings"]
authors = ["yavko <yavornkolev@gmail.com>"]

[dependencies]
hyprland-macros = { path = "hyprland-macros", version = "0.4.0-beta.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tokio = { version = "1", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "sync",
    "rt"
], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
async-net = { version = "2.0", optional = true }
async-std = { version = "1.13", optional = true }
futures-lite = { version = "2.3", default-features = false }
num-traits = "0.2.19"
paste = "1.0.14"
derive_more = { version = "1.0.0", features = [
    "display",
    "constructor",
] }
once_cell = "1.19"
parking_lot = { version = "0.12", optional = true }
ahash = { version = "0.8", features = [
    "std",
    "no-rng",
    "serde",
], optional = true, default-features = false }
phf = {version="0.11.2", features = ["macros"] }
either = "1.13.0"
async-stream = "0.3.6"

[features]
default = [
    "listener",
    "dispatch",
    "data",
    "keyword",
    "config",
    "ctl",
    "tokio",
    "ahash",
]
async-lite = ["dep:async-net"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]
dispatch = []
data = []
ctl = []
keyword = []
config = ["dispatch", "keyword"]
listener = ["data", "dispatch"]
parking_lot = ["dep:parking_lot", "once_cell/parking_lot", "tokio?/parking_lot"]
ahash = ["dep:ahash"]
unsafe-impl = []
