[package]
name = "hyprland-macros"
description = "Macros used in hyprland-rs"
version.workspace = true
license.workspace = true
readme = "README.md"
edition = "2021"
homepage = "https://github.com/hyprland-community/hyprland-rs/tree/master/hyprland-macros"
repository = "https://github.com/hyprland-community/hyprland-rs"

[package.metadata.nix]
build = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"]}
quote = "1"
