[package]
name = "almost_everything"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyprland = { version = "0.3.13", path = "../..", default-features = false, features = ["config", "ctl", "data", "dispatch", "keyword", "listener", "async-lite"] }
